Closed
Bug 1127679
Opened 11 years ago
Closed 11 years ago
"ASSERTION: writing-mode mismatch" with inline-flex, rtl
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
| Tracking | Status | |
|---|---|---|
| firefox38 | --- | fixed |
People
(Reporter: jruderman, Assigned: jfkthame)
References
Details
(Keywords: assertion, testcase)
Attachments
(4 files)
|
153 bytes,
text/html
|
Details | |
|
5.53 KB,
text/plain
|
Details | |
|
2.24 KB,
patch
|
smontagu
:
review+
|
Details | Diff | Splinter Review |
|
1.65 KB,
patch
|
smontagu
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: writing-mode mismatch: 'aOrigin.GetWritingMode() == GetWritingMode()', file WritingModes.h
| Reporter | ||
Comment 1•11 years ago
|
||
| Assignee | ||
Comment 2•11 years ago
|
||
Here's a reftest that not only hits this assertion, but also exhibits incorrect rendering as a result of the incorrect writing mode.
Attachment #8557334 -
Flags: review?(smontagu)
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•11 years ago
|
||
And here's a patch that fixes it.
Attachment #8557335 -
Flags: review?(smontagu)
Updated•11 years ago
|
Attachment #8557334 -
Flags: review?(smontagu) → review+
Comment 4•11 years ago
|
||
Comment on attachment 8557335 [details] [diff] [review]
Fix use of incorrect writing mode in flex-item relative positioning
Review of attachment 8557335 [details] [diff] [review]:
-----------------------------------------------------------------
This looks right, but I wonder if the same issue is going to come up elsewhere, in which case it would be worth adding a version of ApplyRelativePositioning which takes a WritingMode and makes this conversion? Or maybe always doing so in the non-static version, since the conversion will be a no-op if the passed-in WritingMode is identical to mWritingMode?
Attachment #8557335 -
Flags: review?(smontagu) → review+
| Assignee | ||
Comment 5•11 years ago
|
||
I wondered that, too, but I'm inclined to start with this and see how things go... if we find we're needing the same pattern in other places, we can consider refactoring into a helper.
| Assignee | ||
Comment 6•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/3f097e9f3069
https://hg.mozilla.org/integration/mozilla-inbound/rev/16d608fdd682
Target Milestone: --- → mozilla38
Comment 7•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/3f097e9f3069
https://hg.mozilla.org/mozilla-central/rev/16d608fdd682
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
status-firefox38:
--- → fixed
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•