Bug 1127679 - Fix use of incorrect writing mode in flex-item relative positioning. r=smontagu